<resources>
    <string name="app_name">PracticeFragment</string>
    <string name="go_to_fragment_a">go to fragment a</string>
    <string name="note_main_activity">In this page, we moved from Activity to Fragment. Pay attention how it is implemented</string>
    <string name="show_bottom_sheet">show bottom sheet</string>
    <string name="go_to_dialog">go to dialog</string>
    <string name="callback_data">Callback data :</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="carry_callback_data_to_fragment_c">carry callback data to fragment C</string>
    <string name="message_fragment_a">With these buttons, you will transfer from Fragment to another Fragment . Pay attention how it is implementated</string>
    <string name="back_to_main_activity">back to Main Activity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nothings">Nothings …</string>
    <string name="nothing_to_show">Nothing to show …</string>
    <string name="default_value">default</string>
    <string name="you_are_in_fragment_a">You Are in Fragment A !!</string>
    <string name="this_is_activity">This Is Activity !!</string>
</resources>