<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <TextView
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="This Is Activity !!"
            android:gravity="center"
            android:textColor="#570404"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14sp"
            android:paddingBottom="10sp"
            android:paddingTop="10sp"
            android:background="#F7FAF8"
            android:layout_marginTop="30sp"
            android:gravity="center"
            android:text="@string/note_main_activity"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/intro" />

        <Button
            android:id="@+id/btn_go_to_fragment_A"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:text="@string/go_to_fragment_a"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.073" />

        <LinearLayout
            android:id="@+id/ly_fragments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_go_to_fragment_A">
            <Button
                android:id="@+id/btn_show_bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/show_bottom_sheet"
                android:textSize="19sp"/>
            <Button
                android:id="@+id/btn_go_to_dialog_fragment"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="19sp"
                android:text="@string/go_to_dialog"/>
            <Button
                android:id="@+id/btn_carry_to_fragment_c"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="17sp"
                android:text="@string/carry_callback_data_to_fragment_c"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14sp"
            android:layout_marginVertical="40sp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ly_fragments">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/callback_data"/>
            <TextView
                android:id="@+id/callback_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="20sp"
                android:textColor="@color/black"
                android:text="default"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>